--- a/README.Rmd
+++ b/README.Rmd
@@ -23,6 +23,8 @@ knitr::opts_chunk$set(
 # About
 An R-package which estimates linear and nonlinear impulse responses
 with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.1257/0002828053828518).
+Please cite the paper by  [Adämmer (2019)](https://journal.r-project.org/archive/2019/RJ-2019-052/index.html)
+when using the package.
 
 ## Main features
 
