--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,10 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-# lpirfs [![CRAN Version](https://www.r-pkg.org/badges/version/lpirfs)](https://CRAN.R-project.org/package=lpirfs) 
+# lpirfs <a href='https://journal.r-project.org/archive/2019/RJ-2019-052/index.html'><img src='man/figures/lpirfs_logo.png' align="right" height="180" /></a>
+
+<!-- # lpirfs   -->
+[![CRAN Version](https://www.r-pkg.org/badges/version/lpirfs)](https://CRAN.R-project.org/package=lpirfs)
  [![R-CMD-check](https://github.com/AdaemmerP/lpirfs/workflows/R-CMD-check/badge.svg)](https://github.com/AdaemmerP/lpirfs/actions)
 [![Total Downloads](https://cranlogs.r-pkg.org/badges/grand-total/lpirfs?color=orange)](https://CRAN.R-project.org/package=lpirfs) 
 [![Downloads](https://cranlogs.r-pkg.org/badges/lpirfs)](https://CRAN.R-project.org/package=lpirfs)
@@ -20,7 +23,7 @@ knitr::opts_chunk$set(
 ```
 
 
-# About
+## About
 An R-package which estimates linear and nonlinear impulse responses
 with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.1257/0002828053828518).<br />
 
