--- a/README.Rmd
+++ b/README.Rmd
@@ -56,13 +56,7 @@ You can install the development version of **lpirfs** from [GitHub](https://gith
 devtools::install_github("https://github.com/AdaemmerP/lpirfs/tree/dev")
 ```
 
-The package compiles some C++ source code for installation, which is why you need the appropriate compilers:
-
-On Windows you need [Rtools](https://cran.r-project.org/bin/windows/Rtools/) available from CRAN. 
-
-On macOS you need the Clang 6.x compiler and the GNU Fortran compiler from [macOS tools](https://cran.r-project.org/bin/macosx/tools/).
-Having installed the compilers, you need to open a terminal and start R via 'PATH=/usr/local/clang6/bin:$PATH R'. 
-Yo can then install the package via *devtools::install_github("AdaemmerP/lpirfs")*
+As lpirfs compiles some C++ source code, you will need to have installed the appropriate compilers to build the development version.
 
 ## How to use 
 The paper about the package can be found [here.](https://journal.r-project.org/archive/2019/RJ-2019-052/index.html)
